fix: tweak light theme contrast 🐧

--- a/publish.css
+++ b/publish.css
@@ -147,7 +147,7 @@ body {
 }
 
 .theme-light {
-  --background-primary: #e7e7e7;
+  --background-primary: #dfe7e8;
   --background-primary-alt: #e7e7e7;
   --background-secondary: #e3e3e3; /* thick menu border */
   --background-secondary-alt: #bebebe; /* ← ↓  corner */
